name:                funflow-gis
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Matthew Pickering
maintainer:          matthewtpickering@gmail.com
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable funflow-gis
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.11
                     , containers
                     , funflow
                     , path
                     , path-io
                     , text
                     , http-conduit
                     , conduit
                     , zlib
                     , bytestring
                     , data-default
                     , raw-strings-qq
  default-language:    Haskell2010
  ghc-options: -Wall
